# robotics-project

./: .gitignore  kobra.world
code/src/: .gitignore  telop_key.cpp
code/src/kobra/: CMakeLists.txt  package.xml
code/src/kobra_description/: CMakeLists.txt  package.xml
code/src/kobra_description/meshes/: chassis.dae  left_wheel.dae  vertical_arm.dae
code/src/kobra_description/meshes/stl/: left_wheel.stl  right_wheel.stl  vertical_arm.STL
code/src/kobra_description/rviz/: kobra_navigation_stack.rviz
code/src/kobra_description/sdf/: model.sdf
code/src/kobra_gazebo/: CMakeLists.txt  CMakeLists.txt~  package.xml
code/src/kobra_gazebo/launch/: kobra.launch  move_base.launch  navigation_goals.launch
code/src/kobra_gazebo/yaml/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
code/src/kobra_joystick/: CMakeLists.txt  package.xml
code/src/kobra_joystick/include/kobra_joystick/: kobra_joystick.h
code/src/kobra_joystick/src/: kobra_joystick.cpp
code/src/kobra_msgs/: CMakeLists.txt  package.xml
code/src/kobra_odom/: CMakeLists.txt  CMakeLists.txt~  package.xml
code/src/kobra_odom/include/kobra_odom/: kobra_pose_node.h  pose_node.h
code/src/kobra_odom/src/: kobra_pose_node.cpp  pose_node.cpp
code/src/kobra_plugins/: .gitignore  CMakeLists.txt  package.xml
code/src/kobra_plugins/include/kobra_plugins/: kobra_transformation_frame.h  pantilt_camera.h  steering_control.h
code/src/kobra_plugins/kobra_plugins/include/kobra_plugins/: kobra_transformation_frame.h  steering_control.h
code/src/kobra_plugins/kobra_plugins/msg/: ptz_msg.msg
code/src/kobra_plugins/kobra_plugins/src/: pantilt_camera.cpp  steering_control.cpp
code/src/kobra_plugins/msg/: ptz_msgs.msg
code/src/kobra_plugins/src/: kobra_transformation_frame.cpp  pantilt_camera.cpp  steering_control.cpp
code/src/msg/: ptz_msg.msg
code/src/pantilt_camera/: CMakeLists.txt  pantilt_camera.cpp  pantilt_camera.h
code/src/plugins/kobra_plugins/: CMakeLists.txt
code/src/plugins/kobra_plugins/include/kobra_plugins/: kobra_transformation_frame.h  pantilt_camera.h  steering_control.h
code/src/plugins/kobra_plugins/src/: kobra_transformation_frame.cpp  pantilt_camera.cpp  steering_control.cpp
code/src/simple_navigation_goals/: CMakeLists.txt  package.xml  path.txt
code/src/simple_navigation_goals/src/: simple_navigation_goals.cpp
code/src/steering_control/: CMakeLists.txt  steering_control.cpp  steering_control.h
documents/: instructions.txt
model/: model.config  model.sdf
model/arm/: arm.sdf  model.config
model/kobra/: model.sdf
model/kobra_box/: chassis.sdf  model.config
model/kobra_camera/: camera.sdf  model.config
model/kobra_hokuyo/: hokuyo.sdf  model.config
model/meshes/: right_wheel.dae  untitled.dae
